src/test/ui/invalid-module-declaration/invalid-module-declaration.stderr
error[E0583]: file not found for module `baz`
  --> $DIR/auxiliary/foo/bar.rs:1:9
   |
LL | pub mod baz;
   |         ^^^
   |
   = help: name the file either bar/baz.rs or bar/baz/mod.rs inside the directory "$DIR/auxiliary/foo"

error: aborting due to previous error

For more information about this error, try `rustc --explain E0583`.
